--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -5,8 +5,7 @@
 
 
 .random {
-    padding: 80px 0 0 80px;
-    padding-bottom: 140px;
+    padding: 80px 0 140px 80px;
     display: block;
     width: 87%;
 }
@@ -38,9 +37,19 @@
     top: 0;
     width:186px;
     height:186px;
-    border-radius: 400px;
+/*    border-radius: 400px;*/
     box-shadow: 0px 0px 10px #ccc;
     margin-bottom: 30px;
+}
+
+.random_tags{
+    position:absolute;
+    top: 72%;
+    margin-top: 15px;
+    width: 100%;
+    line-height: 30px;
+    font-size: 1.4rem;
+    color: #031e36;
 }
 
 .random_name {
@@ -55,22 +64,6 @@
     margin-bottom: 15px;
 }
 
-/*
-.random_hr{
-    position:absolute;
-    top: 80%;
-}
-*/
-
-hr {
-    position:absolute;
-    top: 80%;
-    width: 100%;
-    border-width: 4px 0px 0px 0px; /* 太さ */
-    border-style: solid; /* 線種 */
-    border-color: #b7a380;   /* 線色 */
-    height: 1px;         /* 高さ(※古いIE用) */
-}
 .random_description {
     position:absolute;
     top: 82%;
@@ -81,3 +74,71 @@ hr {
     color: #031e36;
 }
 
+@media screen and ( max-width:414px )
+{
+    .wrap-col{
+        height: 83%;
+        position:relative;
+    }
+
+
+    .random {
+        padding: 0 0 140px 0;
+        display: block;
+        width: 100%;
+    }
+    .random_grid {
+        margin: 0 auto;
+        margin-top: 200px;
+    }
+    .random_grid li {
+        display: inline-block;
+        width: 77%;
+        height: 305px;
+        padding: 40px 20px 30px;
+        background-color: #ffffff;
+        box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
+        border-radius: 15px;
+        margin: 35px 25px;
+    }
+
+    .random_grid a{
+        text-decoration: none;
+    }
+
+    .random_grid li:hover{
+        box-shadow: 0 2px 10px 2px rgba(0,0,0,0.26);
+        transition: 0.1s;
+    }
+    .random_icon {
+        position: absolute;
+        top: -8px;
+        width:100%;
+        height:186px;
+        box-shadow: 0px 0px 10px #ccc;
+        margin-bottom: 30px;
+    }
+
+    .random_name {
+        position: absolute;
+        top: 87%;
+        width: 100%;
+        text-align: center;
+        font-size: 2.0rem;
+        font-weight: 200;
+        letter-spacing: 5px;
+        color: #b7a380;
+        margin-bottom: 15px;
+    }
+
+
+    .random_description {
+        position:absolute;
+        top: 92%;
+        margin-top: 15px;
+        width: 100%;
+        line-height: 30px;
+        font-size: 1.4rem;
+        color: #031e36;
+    }
+}
