--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -1,13 +1,13 @@
 .wrap-col{
-    height: 350px;
+    height: 83%;
     position:relative;
 }
 
 
 .random {
-    padding: 80px 0 140px 80px;
+    padding: 0 0 140px 0;
     display: block;
-    width: 87%;
+    width: 100%;
 }
 .random_grid {
     margin: 0 auto;
@@ -15,8 +15,8 @@
 }
 .random_grid li {
     display: inline-block;
-    width: 186px;
-    height: 380px;
+    width: 77%;
+    height: 305px;
     padding: 40px 20px 30px;
     background-color: #ffffff;
     box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
@@ -34,15 +34,14 @@
 }
 .random_icon {
     position: absolute;
-    top: 0;
-    width:186px;
+    top: -8px;
+    width:100%;
     height:186px;
-/*    border-radius: 400px;*/
     box-shadow: 0px 0px 10px #ccc;
     margin-bottom: 30px;
 }
 
-.random_tags{
+.random_tags_parent{
     position:absolute;
     top: 72%;
     margin-top: 15px;
@@ -54,7 +53,7 @@
 
 .random_name {
     position: absolute;
-    top: 59%;
+    top: 87%;
     width: 100%;
     text-align: center;
     font-size: 2.0rem;
@@ -64,9 +63,10 @@
     margin-bottom: 15px;
 }
 
+
 .random_description {
     position:absolute;
-    top: 82%;
+    top: 92%;
     margin-top: 15px;
     width: 100%;
     line-height: 30px;
@@ -74,8 +74,8 @@
     color: #031e36;
 }
 
-@media screen and ( max-width:414px )
-{
+@media screen and (min-width:320px) {
+    /*　画面サイズが480pxからはここを読み込む　*/
     .wrap-col{
         height: 83%;
         position:relative;
@@ -119,6 +119,16 @@
         margin-bottom: 30px;
     }
 
+    .random_tags_parent{
+        position:absolute;
+        top: 72%;
+        margin-top: 15px;
+        width: 100%;
+        line-height: 30px;
+        font-size: 1.4rem;
+        color: #031e36;
+    }
+
     .random_name {
         position: absolute;
         top: 87%;
@@ -135,6 +145,87 @@
     .random_description {
         position:absolute;
         top: 92%;
+        margin-top: 15px;
+        width: 100%;
+        line-height: 30px;
+        font-size: 1.4rem;
+        color: #031e36;
+    }
+}
+@media screen and (min-width:768px) and ( max-width:1024px) {
+    /*　画面サイズが768pxから1024pxまではここを読み込む　*/
+}
+@media screen and (min-width:1024px) {
+    /*　画面サイズが1024pxからはここを読み込む　*/
+    .wrap-col{
+        height: 350px;
+        position:relative;
+    }
+
+
+    .random {
+        padding: 80px 0 140px 80px;
+        display: block;
+        width: 87%;
+    }
+    .random_grid {
+        margin: 0 auto;
+        margin-top: 200px;
+    }
+    .random_grid li {
+        display: inline-block;
+        width: 186px;
+        height: 380px;
+        padding: 40px 20px 30px;
+        background-color: #ffffff;
+        box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
+        border-radius: 15px;
+        margin: 35px 25px;
+    }
+
+    .random_grid a{
+        text-decoration: none;
+    }
+
+    .random_grid li:hover{
+        box-shadow: 0 2px 10px 2px rgba(0,0,0,0.26);
+        transition: 0.1s;
+    }
+    .random_icon {
+        position: absolute;
+        top: 0;
+        width:186px;
+        height:186px;
+    /*    border-radius: 400px;*/
+        box-shadow: 0px 0px 10px #ccc;
+        margin-bottom: 30px;
+    }
+
+    .random_tags_parent{
+        position:absolute;
+        top: 72%;
+        margin-top: 15px;
+        width: 100%;
+        line-height: 30px;
+        font-size: 1.4rem;
+        color: #031e36;
+    }
+
+    .random_name {
+        position: absolute;
+        top: 59%;
+        width: 100%;
+        text-align: center;
+        font-size: 2.0rem;
+        font-weight: 200;
+        letter-spacing: 5px;
+        color: #b7a380;
+        margin-bottom: 15px;
+    }
+
+    .random_description {
+        position:absolute;
+        top: 82%;
         margin-top: 15px;
         width: 100%;
         line-height: 30px;
