--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -1,3 +1,4 @@
+/*　モバイル（iPhone,Android）に関するCSSを記述する*/
 .wrap-col{
     height: 83%;
     position:relative;
@@ -21,7 +22,7 @@
     background-color: #ffffff;
     box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
     border-radius: 15px;
-    margin: 35px 25px;
+    margin: 20px 20px;
 }
 
 .random_grid a{
@@ -43,12 +44,14 @@
 
 .random_tags_parent{
     position:absolute;
-    top: 72%;
+    top: 68%;
     margin-top: 15px;
     width: 100%;
     line-height: 30px;
     font-size: 1.4rem;
     color: #031e36;
+    text-align: left;
+    padding: 0 0 0 2%;
 }
 
 .random_name {
@@ -74,89 +77,19 @@
     color: #031e36;
 }
 
-@media screen and (min-width:320px) {
-    /*　画面サイズが480pxからはここを読み込む　*/
-    .wrap-col{
-        height: 83%;
-        position:relative;
-    }
+/*スラッグがクラス名になる*/
+.sports,.evevt,.social-activity,.hobby{
+    margin: 0 2% 0 0;
+}
+@media screen and (min-width:480px) {
+    /*　モバイル（iPhone,Android）を傾けたときのCSSを記述する*/
 
-
-    .random {
-        padding: 0 0 140px 0;
-        display: block;
-        width: 100%;
-    }
-    .random_grid {
-        margin: 0 auto;
-        margin-top: 200px;
-    }
-    .random_grid li {
-        display: inline-block;
-        width: 77%;
-        height: 305px;
-        padding: 40px 20px 30px;
-        background-color: #ffffff;
-        box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
-        border-radius: 15px;
-        margin: 35px 25px;
-    }
-
-    .random_grid a{
-        text-decoration: none;
-    }
-
-    .random_grid li:hover{
-        box-shadow: 0 2px 10px 2px rgba(0,0,0,0.26);
-        transition: 0.1s;
-    }
-    .random_icon {
-        position: absolute;
-        top: -8px;
-        width:100%;
-        height:186px;
-        box-shadow: 0px 0px 10px #ccc;
-        margin-bottom: 30px;
-    }
-
-    .random_tags_parent{
-        position:absolute;
-        top: 72%;
-        margin-top: 15px;
-        width: 100%;
-        line-height: 30px;
-        font-size: 1.4rem;
-        color: #031e36;
-    }
-
-    .random_name {
-        position: absolute;
-        top: 87%;
-        width: 100%;
-        text-align: center;
-        font-size: 2.0rem;
-        font-weight: 200;
-        letter-spacing: 5px;
-        color: #b7a380;
-        margin-bottom: 15px;
-    }
-
-
-    .random_description {
-        position:absolute;
-        top: 92%;
-        margin-top: 15px;
-        width: 100%;
-        line-height: 30px;
-        font-size: 1.4rem;
-        color: #031e36;
-    }
 }
 @media screen and (min-width:768px) and ( max-width:1024px) {
-    /*　画面サイズが768pxから1024pxまではここを読み込む　*/
+    /*　iPadのCSSを記述する*/
 }
 @media screen and (min-width:1024px) {
-    /*　画面サイズが1024pxからはここを読み込む　*/
+    /*　PC用のCSSを記述する　*/
     .wrap-col{
         height: 350px;
         position:relative;
@@ -196,7 +129,7 @@
         top: 0;
         width:186px;
         height:186px;
-    /*    border-radius: 400px;*/
+        /*    border-radius: 400px;*/
         box-shadow: 0px 0px 10px #ccc;
         margin-bottom: 30px;
     }
@@ -233,3 +166,4 @@
         color: #031e36;
     }
 }
+s
