--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -9,6 +9,7 @@
     padding: 0 0 140px 0;
     display: block;
     width: 100%;
+    margin: 0 auto;
 }
 .random_grid {
     margin: 0 auto;
@@ -37,7 +38,7 @@
     position: absolute;
     top: -8px;
     width:100%;
-    height:186px;
+    height:180px;
     box-shadow: 0px 0px 10px #ccc;
     margin-bottom: 30px;
 }
@@ -97,9 +98,10 @@
 
 
     .random {
-        padding: 80px 0 140px 80px;
+        padding: 80px 0 140px 0px;
         display: block;
-        width: 87%;
+        width: 97%;
+        margin: 0 auto;
     }
     .random_grid {
         margin: 0 auto;
@@ -107,13 +109,13 @@
     }
     .random_grid li {
         display: inline-block;
-        width: 186px;
-        height: 380px;
+        width: 300px;
+        height: 317px;
         padding: 40px 20px 30px;
         background-color: #ffffff;
         box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
         border-radius: 15px;
-        margin: 35px 25px;
+        margin: 35px 33px;
     }
 
     .random_grid a{
@@ -126,8 +128,8 @@
     }
     .random_icon {
         position: absolute;
-        top: 0;
-        width:186px;
+        top: -19px;
+        width: 100%;
         height:186px;
         /*    border-radius: 400px;*/
         box-shadow: 0px 0px 10px #ccc;
@@ -136,7 +138,7 @@
 
     .random_tags_parent{
         position:absolute;
-        top: 72%;
+        top: 46%;
         margin-top: 15px;
         width: 100%;
         line-height: 30px;
@@ -146,10 +148,10 @@
 
     .random_name {
         position: absolute;
-        top: 59%;
+        top: 61%;
         width: 100%;
         text-align: center;
-        font-size: 2.0rem;
+        font-size: 3.0rem;
         font-weight: 200;
         letter-spacing: 5px;
         color: #b7a380;
@@ -158,12 +160,12 @@
 
     .random_description {
         position:absolute;
-        top: 82%;
+        top: 68%;
         margin-top: 15px;
         width: 100%;
         line-height: 30px;
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         color: #031e36;
     }
 }
-s
+
