--- a/css/single.css
+++ b/css/single.css
@@ -14,6 +14,11 @@ h1,h2,h3,h4,h5,h6 {
     font-weight: normal;
 }
 
+
+.container{
+    height: 1000px;
+}
+
 /*サークルの画像について*/
 /*width 375 height 280くらい*/
 /* divタグでクリッピングする*/
@@ -37,11 +42,58 @@ h1,h2,h3,h4,h5,h6 {
 
 .overview{
     width: 100%;
-    height: 100px;
+    padding-top: 16px;
+
 }
 
+.title__name{
+    font-size: 1.8rem;
+}
+
+.sns{
+    width: 360px;
+    margin-top: 16px auto;
+
+}
+.sns__item{
+    display: inline-block;
+    color: #ffffff;
+    width: 112px;
+    height: 34px;
+    background: blue;
+    text-align: center;
+    border-radius: 5px;
+}
+.sns a{
+    font-size: 2.4rem;
+    padding-top: 10px;
+}
+
+.sns__facebook{
+    background: #3b5998;
+    border-bottom :#404c66 solid 3px
+}
+
+.sns__twitter{
+    background: #55acee;
+    border-bottom: #5698cb solid 3px
+}
+
+.sns__webpage{
+    background: #00c300;
+    border-bottom: #40ab40 solid 3px
+}
+/*facebook 3b5998  border-bottom #404c66 solid 3px*/
+/*twitter #55acee  border-bottom #5698cb solid 3px*/
+/*webpage #00c300  border-bottom #40ab40 solid 3px*/
 
 
+.chart{
+    width: 80%;
+    height: 100px;
+    background: gray;
+    margin: 0 auto;
+}
 
 
 
