--- a/css/single.css
+++ b/css/single.css
@@ -94,7 +94,7 @@ h1,h2,h3,h4,h5,h6 {
 .chart{
     width: 80%;
     height: 200px;
-    background: gray;
+/*    background: gray;*/
     margin: 0 auto;
 }
 
