ヘッダーフッターとこのページについて

--- a/css/headerandfooter.css
+++ b/css/headerandfooter.css
@@ -174,7 +174,7 @@ li.nav__mega ul.nav__category .nav___search{
 
 
 .nav___btnSearch .nav-search_req {
-    
+
     padding: 0em 0.4em;
     width: 120px;
     height: 40px;
@@ -263,11 +263,104 @@ li.nav__mega .nav___typeSearch {
 
 /*フッター*/
 
+/*　モバイル（iPhone,Android）に関するCSSを記述する*/
+footer{
+font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro';
+font-weight: 400;
+background-color: #fff;
+color: #fff;
+}
+
+footer p{
+padding: 15px 0;
+text-align: center;
+font-size: 1.4rem;
+}
+
+.footer_nav{
+width: 100%;
+margin: 0 auto;
+}
+
+.footer_nav .footer_nav-title{
+display: none;
+}
+
+.footer_nav .footer_nav-main{
+display: flex;
+justify-content : center;
+}
+
+.footer_nav .footer_nav-main li{
+width: 100%;
+padding: 25px 0 25px 0 ;
+text-align: center;
+margin-bottom: 20px;
+border-top: 2px;
+border-bottom: 2px;
+border-style: solid;
+border-color: black;
+}
+
+.footer_nav li + li {
+border-left: 2px solid #222;
+}
+
+.footer_nav .footer_nav-main a {
+color: #000;
+font-size: 1.8rem;
+text-decoration: none;
+}
+
+.footer_nav-policy{
+display: flex;
+justify-content : center;
+margin-bottom: 20px;
+margin-top: 18px;
+}
+
+.footer_nav .footer_nav-policy li{
+width: 25%;
+padding: 8px;
+margin-bottom: 15px;
+text-align: center;
+
+}
+
+.footer_nav .footer_nav-policy li a{
+color: #000;
+font-size: 1.2rem;
+text-decoration: none;
+}
+
+
+
+.copyright{
+font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro';
+font-weight: 400;
+letter-spacing: 0.3rem;
+font-size: 1rem;
+background: #000;
+}
+
+
+@media screen and (min-width:480px) {
+/*　モバイル（iPhone,Android）を傾けたときのCSSを記述する*/
+
+@media screen and (min-width:768px) and ( max-width:1024px) {
+/*　iPadのCSSを記述する*/
+}
+
+
+
+@media screen and (min-width:1024px) {
+/*　PC用のCSSを記述する　*/
+
 footer{
     font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro';
     font-weight: 400;
-    background-color: #031E36 ;
-    color: #ffffff;
+    background-color: #c0c0c0 ;
+    color: #fff;
 }
 
 footer p{
@@ -280,6 +373,24 @@ footer p{
     width: 90%;
     margin: 0 auto;
 }
+
+.footer_nav li + li {
+  border: 0px;
+}
+
+.footer_nav .footer_nav-main li{
+margin-bottom: 20px;
+border-top: 0px;
+border-bottom: 0px;
+}
+
+
+ .footer_nav .footer_nav-title{
+     width: 40%;
+     margin: 12px;
+     float: left;
+}
+
 
 .footer_nav .footer_nav-main{
     display: flex;
@@ -295,12 +406,15 @@ footer p{
 
 .footer_nav .footer_nav-main a {
     color: #fff;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     text-decoration: none;
 }
 
+
+
 .footer_nav-policy{
-    float: right;
+    display: flex;
+    justify-content : flex-end;
     margin-bottom: 20px;
 }
 
@@ -308,12 +422,13 @@ footer p{
     padding: 2px 0px;
     text-align: right;
     margin-bottom: 15px;
+    margin-left: 30px;
 }
 
 .footer_nav .footer_nav-policy li a{
 
     color: #fff;
-    font-size: 0.5rem;
+    font-size: 0.8rem;
     text-decoration: none;
 }
 
@@ -322,5 +437,9 @@ footer p{
     font-weight: 400;
     letter-spacing: 0.3rem;
     font-size: 1rem;
-    background: black;
+    background: #000;
+}
+
+
+
 }
