--- a/css/notfound.css
+++ b/css/notfound.css
@@ -18,6 +18,7 @@ body{
     border-radius: 15px;
     margin-bottom: 32px;
     padding-top: 32px;
+    box-shadow: 0 2px 2px rgba(0,0,0,0.26);
 }
 
 
