--- a/css/policy.css
+++ b/css/policy.css
@@ -18,63 +18,116 @@ body{
 .clear{
     clear: both;
 }
-.policy h2{
+
+.policy{
+    padding: 0;
+}
+
+.policy .policy_title{
     font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", ".HiraKakuInterface-W1";
     font-weight: 100;
     letter-spacing: 0.5rem;
-    margin-left: 30px;
     margin-bottom: 50px;
     font-size: 2rem;
+    text-align: center;
+    color: #fff;
+    background-color: #000;
+    width: 100%;
+    padding: 20px;
 }
+
+.policy_sentence{
+    margin: auto;
+    font-size: 1.2rem;
+    line-height: 3rem;
+    width: 92%;
+    letter-spacing: 0.2rem;
+    line-height: 4.8rem;
+}
+
+.policy_heading{
+    font-size: 2rem;
+    font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", ".HiraKakuInterface-W1";
+    margin-top: 50px;
+    margin-bottom: 30px;
+    font-weight: bold;
+}
+
+/*　モバイル（iPhone,Android）に関するCSSを記述する*/
+
+@media screen and (min-width:480px) {
+/*　モバイル（iPhone,Android）を傾けたときのCSSを記述する*/
+
+}
+@media screen and (min-width:768px) and ( max-width:1024px) {
+/*　iPadのCSSを記述する*/
+.policy{
+    margin: auto;
+    padding: 16px;
+    width: 100%;
+}
+
+  .policy .policy_title{
+    font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", ".HiraKakuInterface-W1";
+    letter-spacing: 0.5rem;
+    margin-left: 30px;
+    margin: 50px;
+    font-size: 4rem;
+    font-weight: bold;
+    text-align:left;
+    color: #000;
+    background-color: #fff;
+    width: 100%;
+    padding: 0px;
+  }
+
+  .policy_sentence{
+      margin: auto;
+      font-size: 1.6rem;
+      line-height: 3rem;
+      width: 92%;
+      letter-spacing: 0.2rem;
+      line-height: 3.8rem;
+  }
+
+  .policy_heading{
+      font-size: 3rem;
+      margin-left: 30px;
+  }
+}
+@media screen and (min-width:1024px) {
+/*　PC用のCSSを記述する　*/
 .policy{
     margin: auto;
     padding: 0;
     width: 92%;
 }
 
-.policy_sentence{
-    font-size: 1.6rem;
-    line-height: 3rem;
-}
-
-
-.policy_num{
-    list-style-type: decimal;
-}
-
-.policy_form{
-    padding: 50px;
-    margin: 20px;
-    display: block;
-    border: 1px solid #808080;
-    border-top: 10px solid #031E36;
-    box-shadow: 0px -5px #B7A380;
-}
-
-.policy_heading{
-    font-size: 3rem;
+  .policy .policy_title{
     font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", ".HiraKakuInterface-W1";
-    margin-top: 50px;
-    margin-bottom: 30px;
+    letter-spacing: 0.5rem;
     margin-left: 30px;
-}
-input[type="submit"]
-{
-    margin-top: 50px;
-    border: none;
-    font-size: 1.5rem;
-    padding-right: 100px;
-    padding: 0.2em 0.4em;
-    background: #031E36;
-    color: #ffffff;
-    border-radius: 10px;
-    width: 200px;
-    height:50px;
-    cursor: pointer;
-}
-input[type="submit"]:hover
-{
-    transition: 0.15s;
-    background-color: #B7A380;
-}
+    margin: 50px;
+    font-size: 4rem;
+    font-weight: bold;
+    text-align:left;
+    color: #000;
+    background-color: #fff;
+    width: 100%;
+    padding: 0px;
+  }
 
+  .policy_sentence{
+      margin: auto;
+      font-size: 1.6rem;
+      line-height: 3rem;
+      width: 92%;
+      letter-spacing: 0.2rem;
+      line-height: 3.2rem;
+  }
+
+  .policy_heading{
+      font-size: 3rem;
+      margin-left: 30px;
+  }
+}
