--- a/css/headerandfooter.css
+++ b/css/headerandfooter.css
@@ -1,26 +1,26 @@
-
 /*clearfix*/
+
 .clearfix:after {
     content: "";
     clear: both;
     display: block;
 }
-.clear{
+
+.clear {
     clear: both;
 }
 
-
-
-header img{
+header img {
     display: block;
     float: left;
     margin: 60px auto;
     margin-left: 40px;
 }
 
+
 /* メニュー */
 
-.nav{
+.nav {
     font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", ".HiraKakuInterface-W1";
     float: right;
     width: 70%;
@@ -31,14 +31,12 @@ header img{
 
 .nav_main {
     display: flex;
-
 }
 
 .nav_main li {
     width: 395px;
-    text-align:center;
+    text-align: center;
 }
-
 
 .nav_main li a {
     display: block;
@@ -47,20 +45,19 @@ header img{
     text-decoration: none;
 }
 
-
 .nav_main li a:hover {
     background-color: #031E36;
     color: #ffffff;
 }
 
 .nav_main > li:hover {
-    color: #031E36 ;
+    color: #031E36;
     -webkit-transition: all .5s;
     transition: all .5s;
 }
 
 .nav__category li a:hover {
-    color: #031E36 ;
+    color: #031E36;
 }
 
 
@@ -77,7 +74,7 @@ li.nav__mega ul.nav__category {
     width: 100%;
     height: 350px;
     padding: 20px 7%;
-    background-color: rgba(255,255,255,1);
+    background-color: rgba(255, 255, 255, 1);
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
     z-index: 2;
@@ -91,23 +88,23 @@ li.nav__mega:hover ul.nav__category {
     opacity: 1;
 }
 
-li.nav__mega .nav___keySearch{
+li.nav__mega .nav___keySearch {
     height: 50px;
 }
 
-li.nav__mega .nav___left{
+li.nav__mega .nav___left {
     float: left;
     width: 12%;
 }
 
-li.nav__mega .nav___right{
+li.nav__mega .nav___right {
     float: right;
     width: 88%;
 }
 
-li.nav__mega .nav___typeSearch{
+li.nav__mega .nav___typeSearch {
     margin-top: 5px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 li.nav__mega form.nav-search .nav___right li {
@@ -115,9 +112,10 @@ li.nav__mega form.nav-search .nav___right li {
     float: left;
     width: 20%;
     border: none;
-    text-align:left;
+    text-align: left;
     font-size: 0.8rem;
 }
+
 
 /*
 li.nav__mega form.nav-search > li:nth-child(6n+5) {
@@ -136,7 +134,7 @@ li.nav__mega form.nav-search > li:nth-child(-n+3) {
 
 /* 検索方法テキスト*/
 
-li.nav__mega form.nav-search .nav___textSearch{
+li.nav__mega form.nav-search .nav___textSearch {
     width: 100px;
     font-size: 0.8rem;
     border-bottom: 1px solid #4B4B4B;
@@ -145,36 +143,32 @@ li.nav__mega form.nav-search .nav___textSearch{
     padding: 4px 0;
 }
 
-li.nav__mega form.nav-search .nav___cateSearch{
+li.nav__mega form.nav-search .nav___cateSearch {
     height: 210px;
 }
 
 
-
-
 /* サーチ条件ボタン */
 
-li.nav__mega ul.nav__category .nav___search{
+li.nav__mega ul.nav__category .nav___search {
     float: right;
-    display:inline-flex;
+    display: inline-flex;
     width: 500px;
     margin-top: 10px;
 }
 
-
-.nav___btnSearch input[type="submit"] ,input[type="button"]
-{
+.nav___btnSearch input[type="submit"],
+input[type="button"] {
     margin-top: 0px;
 }
-.nav___btnSearch input[type="submit"]:hover ,input[type="button"]:hover
-{
+
+.nav___btnSearch input[type="submit"]:hover,
+input[type="button"]:hover {
     transition: 0.15s;
     background-color: #B7A380;
 }
 
-
 .nav___btnSearch .nav-search_req {
-
     padding: 0em 0.4em;
     width: 120px;
     height: 40px;
@@ -188,18 +182,15 @@ li.nav__mega ul.nav__category .nav___search{
     cursor: pointer;
 }
 
-li.nav__mega form.nav-search .nav___btnSearch{
+li.nav__mega form.nav-search .nav___btnSearch {
     float: right;
 }
 
-
-
-li.nav__mega form.nav-search .nav___btnSearch li{
+li.nav__mega form.nav-search .nav___btnSearch li {
     float: left;
     width: 120px;
     margin: 0 10px;
 }
-
 
 
 /* 検索ボックス */
@@ -212,14 +203,16 @@ li.nav__mega .nav___typeSearch {
     position: relative;
     margin-bottom: 10px;
 }
+
 .nav-search_text {
     width: 156px;
     position: absolute;
     top: 3px;
     left: 12px;
     border: 1px solid #FFF;
-
 }
+
+
 /*
 .nav-searchBtn {
     position: absolute;
@@ -229,10 +222,7 @@ li.nav__mega .nav___typeSearch {
 */
 
 
-
-
 /* チェックボックス */
-
 
 .nav__category label {
     position: relative;
@@ -257,189 +247,167 @@ li.nav__mega .nav___typeSearch {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
 .init-bottom:hover {
     color: #ffffff;
 }
 
+
 /*フッター*/
 
-/*　モバイル（iPhone,Android）に関するCSSを記述する*/
-footer{
-font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro';
-font-weight: 400;
-background-color: #fff;
-color: #fff;
-}
 
-footer p{
-padding: 15px 0;
-text-align: center;
-font-size: 1.4rem;
-}
+/*モバイル(iPhone,Android)に関するCSSを記述する*/
 
-.footer_nav{
-width: 100%;
-margin: 0 auto;
-}
-
-.footer_nav .footer_nav-title{
-display: none;
-}
-
-.footer_nav .footer_nav-main{
-display: flex;
-justify-content : center;
-}
-
-.footer_nav .footer_nav-main li{
-width: 100%;
-padding: 25px 0 25px 0 ;
-text-align: center;
-margin-bottom: 20px;
-border-top: 2px;
-border-bottom: 2px;
-border-style: solid;
-border-color: black;
-}
-
-.footer_nav li + li {
-border-left: 2px solid #222;
-}
-
-.footer_nav .footer_nav-main a {
-color: #000;
-font-size: 1.8rem;
-text-decoration: none;
-}
-
-.footer_nav-policy{
-display: flex;
-justify-content : center;
-margin-bottom: 20px;
-margin-top: 18px;
-}
-
-.footer_nav .footer_nav-policy li{
-width: 25%;
-padding: 8px;
-margin-bottom: 15px;
-text-align: center;
-
-}
-
-.footer_nav .footer_nav-policy li a{
-color: #000;
-font-size: 1.2rem;
-text-decoration: none;
-}
-
-
-
-.copyright{
-font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro';
-font-weight: 400;
-letter-spacing: 0.3rem;
-font-size: 1rem;
-background: #000;
-}
-
-
-@media screen and (min-width:480px) {
-/*　モバイル（iPhone,Android）を傾けたときのCSSを記述する*/
-
-@media screen and (min-width:768px) and ( max-width:1024px) {
-/*　iPadのCSSを記述する*/
-}
-
-
-
-@media screen and (min-width:1024px) {
-/*　PC用のCSSを記述する　*/
-
-footer{
-    font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro';
+footer {
+    font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro';
     font-weight: 400;
-    background-color: #c0c0c0 ;
-    color: #fff;
+    background-color: #fff;
+    color: #bdbdbd;
 }
 
-footer p{
+footer p {
     padding: 15px 0;
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.4rem;
 }
 
-.footer_nav{
-    width: 90%;
+.footer_nav {
+    width: 100%;
     margin: 0 auto;
 }
 
-.footer_nav li + li {
-  border: 0px;
+.footer_nav .footer_nav-title {
+    display: none;
 }
 
-.footer_nav .footer_nav-main li{
-margin-bottom: 20px;
-border-top: 0px;
-border-bottom: 0px;
-}
-
-
- .footer_nav .footer_nav-title{
-     width: 40%;
-     margin: 12px;
-     float: left;
-}
-
-
-.footer_nav .footer_nav-main{
+.footer_nav .footer_nav-main {
     display: flex;
-    justify-content : flex-end;
+    justify-content: center;
 }
 
-.footer_nav .footer_nav-main li{
-    width: 140px;
-    padding: 25px 0 7px 0 ;
+.footer_nav .footer_nav-main li {
+    width: 100%;
+    padding: 25px 0 25px 0;
     text-align: center;
     margin-bottom: 20px;
+    border-top: 2px;
+    border-bottom: 2px;
+    border-style: solid;
+    border-color: black;
+}
+
+.footer_nav li + li {
+    border-left: 2px solid #222;
 }
 
 .footer_nav .footer_nav-main a {
-    color: #fff;
+    color: #000;
+    font-size: 1.8rem;
+    text-decoration: none;
+}
+
+.footer_nav-policy {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    margin-top: 18px;
+}
+
+.footer_nav .footer_nav-policy li {
+    width: 25%;
+    padding: 8px;
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+.footer_nav .footer_nav-policy li a {
+    color: #000;
     font-size: 1.2rem;
     text-decoration: none;
 }
 
-
-
-.footer_nav-policy{
-    display: flex;
-    justify-content : flex-end;
-    margin-bottom: 20px;
-}
-
-.footer_nav .footer_nav-policy li{
-    padding: 2px 0px;
-    text-align: right;
-    margin-bottom: 15px;
-    margin-left: 30px;
-}
-
-.footer_nav .footer_nav-policy li a{
-
-    color: #fff;
-    font-size: 0.8rem;
-    text-decoration: none;
-}
-
-.copyright{
-    font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro';
+.copyright {
+    font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro';
     font-weight: 400;
     letter-spacing: 0.3rem;
     font-size: 1rem;
     background: #000;
 }
 
+@media screen and (min-width:480px) {
+    /*モバイル(iPhone,Android)を傾けたときのCSSを記述する*/
+}
 
+@media screen and (min-width:768px) and (max-width:1024px) {
+    /*iPadのCSSを記述する*/
+}
 
+@media screen and (min-width:1024px) {
+    /*PC用のCSSを記述する*/
+    footer {
+        font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro';
+        font-weight: 400;
+        background-color: #c0c0c0;
+        color: #fff;
+    }
+    footer p {
+        padding: 15px 0;
+        text-align: center;
+        font-size: 1rem;
+    }
+    .footer_nav {
+        width: 90%;
+        margin: 0 auto;
+    }
+    .footer_nav li + li {
+        border: 0px;
+    }
+    .footer_nav .footer_nav-main li {
+        margin-bottom: 20px;
+        border-top: 0px;
+        border-bottom: 0px;
+    }
+    .footer_nav .footer_nav-title {
+        width: 40%;
+        margin: 12px;
+        float: left;
+    }
+    .footer_nav .footer_nav-main {
+        display: flex;
+        justify-content: flex-end;
+    }
+    .footer_nav .footer_nav-main li {
+        width: 140px;
+        padding: 25px 0 7px 0;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .footer_nav .footer_nav-main a {
+        color: #fff;
+        font-size: 1.2rem;
+        text-decoration: none;
+    }
+    .footer_nav-policy {
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: 20px;
+    }
+    .footer_nav .footer_nav-policy li {
+        padding: 2px 0px;
+        text-align: right;
+        margin-bottom: 15px;
+        margin-left: 30px;
+    }
+    .footer_nav .footer_nav-policy li a {
+        color: #fff;
+        font-size: 0.8rem;
+        text-decoration: none;
+    }
+    .copyright {
+        font-family: "Helvetica Neue", 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro';
+        font-weight: 400;
+        letter-spacing: 0.3rem;
+        font-size: 1rem;
+        background: #000;
+    }
 }
