--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -1,9 +1,35 @@
 /*　モバイル（iPhone,Android）に関するCSSを記述する*/
+.wellcome{
+    margin: 0 auto;
+    width: 100%;
+}
+
+.wellcome-content{
+    margin: 16px 16px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    font-family: brandonRegular;
+}
+.wellcome-head{
+    width: 100%;
+    font-family: brandonBold;
+    font-size: 2.0rem;
+    padding: 16px 16px;
+/*    text-align: center;*/
+}
+
+.wellcome-body{
+    font-size: 1.2rem;
+    padding: 0 0 16px 16px;
+    line-height: 2.0rem;
+/*    text-align: center;*/
+/*    width:*/
+}
+
 .wrap-col{
     height: 83%;
     position:relative;
 }
-
 
 .random {
     padding: 0 0 140px 0;
