--- a/css/policy.css
+++ b/css/policy.css
@@ -8,7 +8,7 @@ body{
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     background: #f9f9f9;
-    font-family: 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro';
+    font-family: 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro';
 }
 /*---contact---*/
 /**--コンタクト--**/
@@ -38,116 +38,18 @@ body{
     background: #f9f9f9;
     color: #272727;
     padding: 16px;
+    padding-bottom: 32px;
 }
 
 .policy p{
     font-size: 1.2rem;
     line-height: 24px;
 }
-
-
-.contact__form{
-    background: #ffffff;
-    border-radius: 15px;
-    padding: 16px;
-    box-shadow: 0 2px 2px rgba(0,0,0,0.26);
-    margin-top: 24px;
-    margin-bottom: 36px;
-}
-
-
-.contact_name{
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 300px;
-    height: 36px;
-    border-radius: 5px;
-    border: 1px solid #f1f1f1;
-    font-size: 1.2rem;
-    padding-left: 16px;
+.policy h3{
     margin-top: 12px;
-    margin-bottom: 24px;
-    box-shadow: 0 0px 4px rgba(0,0,0,0.20) inset;
-}
-
-.contact_email{
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 300px;
-    height: 36px;
-    border-radius: 5px;
-    border: 1px solid #f1f1f1;
-    font-size: 1.2rem;
-    padding-left: 16px;
-    margin-top: 12px;
-    margin-bottom: 24px;
-    box-shadow: 0 0px 4px rgba(0,0,0,0.20) inset;
-}
-
-
-.contact_message{
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 300px;
-    height: 160px;
-    border-radius: 5px;
-    border: 1px solid #f1f1f1;
-    font-size: 1.2rem;
-    padding: 16px;
-    margin-top: 12px;
-    margin-bottom: 24px;
-    box-shadow: 0 0px 4px rgba(0,0,0,0.20) inset;
-}
-
-
-input[type="submit"]
-{
-    border: none;
     font-size: 1.8rem;
-    background: #272727;
-    color: #ffffff;
-    border-radius: 10px;
-    width: 280px;
-    height: 44px;
-    cursor: pointer;
-    display: block;
-    margin: 0 auto;
+    line-height: 36px;
 }
-
-
-.wpcf7-validation-errors {
-    font-size: 1.2rem;
-    font-weight: normal;
-    text-align: center;
-    color: #fff;
-    background-color: #E53935;
-    padding:20px !important;
-    margin:0px auto;
-    border: none !important;
-}
-
-
-.wpcf7-mail-sent-ok {
-    font-size: 1.2rem;
-    text-align: center;
-    color: #fff;
-    background-color:#272727;
-    padding:20px !important;
-    margin:0px auto;
-    border: none !important;
-}
-
-
-
 
 @media screen and (min-width:480px) {
 
@@ -171,61 +73,21 @@ input[type="submit"]
         margin-right: 88px;
         border-bottom: 3px solid #272727;
     }
-    .contact{
+    .policy{
         padding-left: 188px;
         padding-right: 188px;
         padding-top: 32px;
+        padding-bottom: 48px;
     }
-
-    .contact p{
-        font-size: 1.8rem;
-        line-height: 36px;
-    }
-    .contact__form{
-        background: #ffffff;
-        border-radius: 15px;
-        padding: 32px;
-        padding-left: 88px;
-        padding-right: 88px;
-        box-shadow: 0 2px 2px rgba(0,0,0,0.26);
-        margin-top: 24px;
-        margin-bottom: 36px;
-    }
-
-
-    .contact_name{
-        width: 600px;
-        height: 44px;
+    .policy p{
         font-size: 1.5rem;
+        line-height: 30px;
+    }
+    .policy h3{
+        margin-top: 36px;
+        font-size: 2.0rem;
+        line-height: 40px;
     }
 
-    .contact_email{
-        width: 600px;
-        height: 44px;
-        font-size: 1.5rem;
-    }
-
-
-    .contact_message{
-        width: 600px;
-        height: 180px;
-        font-size: 1.5rem;
-    }
-
-
-
-    input[type="submit"]
-    {
-        border: none;
-        font-size: 1.8rem;
-        background: #272727;
-        color: #ffffff;
-        border-radius: 20px;
-        width: 320px;
-        height: 44px;
-        cursor: pointer;
-        display: block;
-        margin: 0 auto;
-    }
 
 }
