--- a/css/each_exrpt_post.css
+++ b/css/each_exrpt_post.css
@@ -1,7 +1,8 @@
 /*　モバイル（iPhone,Android）に関するCSSを記述する*/
 .wrap-col{
-    height: 83%;
+    height: 100%;
     position:relative;
+    width: 100%;
 }
 
 
@@ -17,9 +18,8 @@
 }
 .random_grid li {
     display: inline-block;
-    width: 77%;
-    height: 305px;
-    padding: 40px 20px 30px;
+    width: 343px;
+    height: 352px;
     background-color: #ffffff;
     box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
     border-radius: 15px;
@@ -36,32 +36,36 @@
 }
 .random_icon {
     position: absolute;
-    top: -8px;
     width:100%;
-    height:180px;
-    box-shadow: 0px 0px 10px #ccc;
+    height:236px;
     margin-bottom: 30px;
+/*    border-radius: 8px;*/
+    border-radius: 8px 8px 0 0 / 8px 8px 0 0;
+}
+
+.random_content{
+    width: 100%;
+    height: 352px;
 }
 
 .random_tags_parent{
     position:absolute;
-    top: 68%;
-    margin-top: 15px;
+    top: 294px;
     width: 100%;
-    line-height: 30px;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     color: #031e36;
     text-align: left;
-    padding: 0 0 0 2%;
+    padding: 0 0 0 16px;
 }
 
 .random_name {
     position: absolute;
-    top: 87%;
+    top: 252px;
     width: 100%;
-    text-align: center;
-    font-size: 2.0rem;
-    font-weight: 200;
+    padding: 0 0 0 16px;
+    text-align: left;
+    font-size: 2.4rem;
+    font-family: brandonRegular;
     letter-spacing: 5px;
     color: #b7a380;
     margin-bottom: 15px;
@@ -71,11 +75,12 @@
 .random_description {
     position:absolute;
     top: 92%;
-    margin-top: 15px;
     width: 100%;
-    line-height: 30px;
     font-size: 1.4rem;
     color: #031e36;
+    padding: 0 0 0 16px;
+    text-align: left;
+    font-family: brandonRegular;
 }
 
 /*スラッグがクラス名になる*/
